--- a/app/src/main/res/layout/activity_category_nature.xml
+++ b/app/src/main/res/layout/activity_category_nature.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layoutDirection="rtl"
-    android:gravity="center"
     android:background="@drawable/img_background"
+    android:gravity="center"
+    android:layoutDirection="rtl"
     android:paddingBottom="@dimen/dimen_categories_padding_bottom">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="horizontal">
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
@@ -97,3 +101,15 @@
     </LinearLayout>
 
 </LinearLayout>
+    <ImageView
+        android:id="@+id/imageView_back"
+        android:layout_width="276px"
+        android:layout_height="49px"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"
+        android:src="@drawable/img_back"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="@dimen/dimen_categories_padding_bottom"/>
+
+</RelativeLayout>
