--- a/app/src/main/res/layout/activity_category_backs_and_backgrounds.xml
+++ b/app/src/main/res/layout/activity_category_backs_and_backgrounds.xml
@@ -1,55 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layoutDirection="rtl"
-    android:gravity="center"
     android:background="@drawable/img_background"
+    android:gravity="center"
+    android:layoutDirection="rtl"
     android:paddingBottom="@dimen/dimen_categories_padding_bottom">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center">
+        android:gravity="center"
+        android:orientation="horizontal">
 
-        <ImageView
-            android:layout_width="@dimen/dimen_category_nature_items_width"
-            android:layout_height="@dimen/dimen_category_nature_items_height"
-            android:src="@drawable/img_color_backs"
-            android:scaleType="centerCrop"
-            android:adjustViewBounds="true"/>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="vertical">
 
-        <ImageView
-            android:layout_width="@dimen/dimen_category_nature_items_width"
-            android:layout_height="@dimen/dimen_category_nature_items_height"
-            android:src="@drawable/img_flower_backs"
-            android:scaleType="centerCrop"
-            android:adjustViewBounds="true"/>
+            <ImageView
+                android:layout_width="@dimen/dimen_category_nature_items_width"
+                android:layout_height="@dimen/dimen_category_nature_items_height"
+                android:adjustViewBounds="true"
+                android:scaleType="centerCrop"
+                android:src="@drawable/img_color_backs" />
+
+            <ImageView
+                android:layout_width="@dimen/dimen_category_nature_items_width"
+                android:layout_height="@dimen/dimen_category_nature_items_height"
+                android:adjustViewBounds="true"
+                android:scaleType="centerCrop"
+                android:src="@drawable/img_flower_backs" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <ImageView
+                android:layout_width="@dimen/dimen_category_nature_items_width"
+                android:layout_height="@dimen/dimen_category_nature_items_height"
+                android:adjustViewBounds="true"
+                android:scaleType="centerCrop"
+                android:src="@drawable/img_3d_backs" />
+
+            <ImageView
+                android:layout_width="@dimen/dimen_category_nature_items_width"
+                android:layout_height="@dimen/dimen_category_nature_items_height"
+                android:adjustViewBounds="true"
+                android:scaleType="centerCrop"
+                android:src="@drawable/img_3d" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center">
+    <ImageView
+        android:id="@+id/imageView_back"
+        android:layout_width="276px"
+        android:layout_height="49px"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"
+        android:src="@drawable/img_back"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="@dimen/dimen_categories_padding_bottom"/>
 
-        <ImageView
-            android:layout_width="@dimen/dimen_category_nature_items_width"
-            android:layout_height="@dimen/dimen_category_nature_items_height"
-            android:src="@drawable/img_3d_backs"
-            android:scaleType="centerCrop"
-            android:adjustViewBounds="true"/>
-
-        <ImageView
-            android:layout_width="@dimen/dimen_category_nature_items_width"
-            android:layout_height="@dimen/dimen_category_nature_items_height"
-            android:src="@drawable/img_3d"
-            android:scaleType="centerCrop"
-            android:adjustViewBounds="true"/>
-
-    </LinearLayout>
-
-</LinearLayout>
+</RelativeLayout>
