--- a/app/src/main/res/layout/album_activity_gallery.xml
+++ b/app/src/main/res/layout/album_activity_gallery.xml
@@ -1,11 +1,31 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:gravity="center">
 
-    <com.veinhorn.scrollgalleryview.ScrollGalleryView
-        android:id="@+id/scroll_gallery_view"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#000" />
+        android:layout_height="match_parent">
 
-</LinearLayout>
+        <com.veinhorn.scrollgalleryview.ScrollGalleryView
+            android:id="@+id/scroll_gallery_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/img_background" />
+
+    </LinearLayout>
+
+    <ImageView
+        android:id="@+id/imageView_back"
+        android:layout_width="276px"
+        android:layout_height="49px"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginRight="@dimen/dimen_categories_padding_bottom"
+        android:layout_marginTop="@dimen/dimen_categories_padding_bottom"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"
+        android:src="@drawable/img_back" />
+
+</RelativeLayout>
