--- a/app/src/main/res/layout/activity_category_graphite_and_special_images.xml
+++ b/app/src/main/res/layout/activity_category_graphite_and_special_images.xml
@@ -13,60 +13,62 @@
         android:gravity="center"
         android:orientation="horizontal">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="vertical">
 
-        <ImageView
-            android:layout_width="@dimen/dimen_category_nature_items_width"
-            android:layout_height="@dimen/dimen_category_nature_items_height"
-            android:src="@drawable/img_graphite"
-            android:scaleType="centerCrop"
-            android:adjustViewBounds="true"/>
+            <ImageView
+                android:layout_width="@dimen/dimen_category_nature_items_width"
+                android:layout_height="@dimen/dimen_category_nature_items_height"
+                android:adjustViewBounds="true"
+                android:scaleType="centerCrop"
+                android:src="@drawable/img_graphite" />
 
-        <ImageView
-            android:layout_width="@dimen/dimen_category_nature_items_width"
-            android:layout_height="@dimen/dimen_category_nature_items_height"
-            android:src="@drawable/img_lux_images"
-            android:scaleType="centerCrop"
-            android:adjustViewBounds="true"/>
+            <ImageView
+                android:layout_width="@dimen/dimen_category_nature_items_width"
+                android:layout_height="@dimen/dimen_category_nature_items_height"
+                android:adjustViewBounds="true"
+                android:scaleType="centerCrop"
+                android:src="@drawable/img_lux_images" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <ImageView
+                android:layout_width="@dimen/dimen_category_nature_items_width"
+                android:layout_height="@dimen/dimen_category_nature_items_height"
+                android:adjustViewBounds="true"
+                android:scaleType="centerCrop"
+                android:src="@drawable/img_statue_and_wind" />
+
+            <ImageView
+                android:layout_width="@dimen/dimen_category_nature_items_width"
+                android:layout_height="@dimen/dimen_category_nature_items_height"
+                android:adjustViewBounds="true"
+                android:scaleType="centerCrop"
+                android:src="@drawable/img_music" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center">
+    <ImageView
+        android:id="@+id/imageView_back"
+        android:layout_width="276px"
+        android:layout_height="49px"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginRight="@dimen/dimen_categories_padding_bottom"
+        android:layout_marginTop="@dimen/dimen_categories_padding_bottom"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"
+        android:src="@drawable/img_back" />
 
-        <ImageView
-            android:layout_width="@dimen/dimen_category_nature_items_width"
-            android:layout_height="@dimen/dimen_category_nature_items_height"
-            android:src="@drawable/img_statue_and_wind"
-            android:scaleType="centerCrop"
-            android:adjustViewBounds="true"/>
-
-        <ImageView
-            android:layout_width="@dimen/dimen_category_nature_items_width"
-            android:layout_height="@dimen/dimen_category_nature_items_height"
-            android:src="@drawable/img_music"
-            android:scaleType="centerCrop"
-            android:adjustViewBounds="true"/>
-
-    </LinearLayout>
-
-</LinearLayout>
-<ImageView
-android:id="@+id/imageView_back"
-android:layout_width="276px"
-android:layout_height="49px"
-android:adjustViewBounds="true"
-android:scaleType="centerCrop"
-android:src="@drawable/img_back"
-android:layout_alignParentBottom="true"
-android:layout_alignParentLeft="true"
-android:layout_marginLeft="@dimen/dimen_categories_padding_bottom"/>
-
-    </RelativeLayout>
+</RelativeLayout>
