--- a/app/src/main/res/layout/activity_category_nature.xml
+++ b/app/src/main/res/layout/activity_category_nature.xml
@@ -12,104 +12,107 @@
         android:layout_height="match_parent"
         android:gravity="center"
         android:orientation="horizontal">
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center">
 
-        <ImageView
-            android:layout_width="@dimen/dimen_category_nature_items_width"
-            android:layout_height="@dimen/dimen_category_nature_items_height"
-            android:src="@drawable/img_winter"
-            android:scaleType="centerCrop"
-            android:adjustViewBounds="true"/>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="vertical">
 
-        <ImageView
-            android:layout_width="@dimen/dimen_category_nature_items_width"
-            android:layout_height="@dimen/dimen_category_nature_items_height"
-            android:src="@drawable/img_window_and_view"
-            android:scaleType="centerCrop"
-            android:adjustViewBounds="true"/>
+            <ImageView
+                android:layout_width="@dimen/dimen_category_nature_items_width"
+                android:layout_height="@dimen/dimen_category_nature_items_height"
+                android:adjustViewBounds="true"
+                android:scaleType="centerCrop"
+                android:src="@drawable/img_winter" />
+
+            <ImageView
+                android:layout_width="@dimen/dimen_category_nature_items_width"
+                android:layout_height="@dimen/dimen_category_nature_items_height"
+                android:adjustViewBounds="true"
+                android:scaleType="centerCrop"
+                android:src="@drawable/img_window_and_view" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <ImageView
+                android:layout_width="@dimen/dimen_category_nature_items_width"
+                android:layout_height="@dimen/dimen_category_nature_items_height"
+                android:adjustViewBounds="true"
+                android:scaleType="centerCrop"
+                android:src="@drawable/img_autumn" />
+
+            <ImageView
+                android:layout_width="@dimen/dimen_category_nature_items_width"
+                android:layout_height="@dimen/dimen_category_nature_items_height"
+                android:adjustViewBounds="true"
+                android:scaleType="centerCrop"
+                android:src="@drawable/img_rock_and_wall" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <ImageView
+                android:layout_width="@dimen/dimen_category_nature_items_width"
+                android:layout_height="@dimen/dimen_category_nature_items_height"
+                android:adjustViewBounds="true"
+                android:scaleType="centerCrop"
+                android:src="@drawable/img_summer" />
+
+            <ImageView
+                android:layout_width="@dimen/dimen_category_nature_items_width"
+                android:layout_height="@dimen/dimen_category_nature_items_height"
+                android:adjustViewBounds="true"
+                android:scaleType="centerCrop"
+                android:src="@drawable/img_four_seasons" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <ImageView
+                android:layout_width="@dimen/dimen_category_nature_items_width"
+                android:layout_height="@dimen/dimen_category_nature_items_height"
+                android:adjustViewBounds="true"
+                android:scaleType="centerCrop"
+                android:src="@drawable/img_spring" />
+
+            <ImageView
+                android:layout_width="@dimen/dimen_category_nature_items_width"
+                android:layout_height="@dimen/dimen_category_nature_items_height"
+                android:adjustViewBounds="true"
+                android:scaleType="centerCrop"
+                android:src="@drawable/img_sea_and_beach" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center">
-
-        <ImageView
-            android:layout_width="@dimen/dimen_category_nature_items_width"
-            android:layout_height="@dimen/dimen_category_nature_items_height"
-            android:src="@drawable/img_autumn"
-            android:scaleType="centerCrop"
-            android:adjustViewBounds="true"/>
-
-        <ImageView
-            android:layout_width="@dimen/dimen_category_nature_items_width"
-            android:layout_height="@dimen/dimen_category_nature_items_height"
-            android:src="@drawable/img_rock_and_wall"
-            android:scaleType="centerCrop"
-            android:adjustViewBounds="true"/>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center">
-
-        <ImageView
-            android:layout_width="@dimen/dimen_category_nature_items_width"
-            android:layout_height="@dimen/dimen_category_nature_items_height"
-            android:src="@drawable/img_summer"
-            android:scaleType="centerCrop"
-            android:adjustViewBounds="true"/>
-
-        <ImageView
-            android:layout_width="@dimen/dimen_category_nature_items_width"
-            android:layout_height="@dimen/dimen_category_nature_items_height"
-            android:src="@drawable/img_four_seasons"
-            android:scaleType="centerCrop"
-            android:adjustViewBounds="true"/>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center">
-
-        <ImageView
-            android:layout_width="@dimen/dimen_category_nature_items_width"
-            android:layout_height="@dimen/dimen_category_nature_items_height"
-            android:src="@drawable/img_spring"
-            android:scaleType="centerCrop"
-            android:adjustViewBounds="true"/>
-
-        <ImageView
-            android:layout_width="@dimen/dimen_category_nature_items_width"
-            android:layout_height="@dimen/dimen_category_nature_items_height"
-            android:src="@drawable/img_sea_and_beach"
-            android:scaleType="centerCrop"
-            android:adjustViewBounds="true"/>
-
-    </LinearLayout>
-
-</LinearLayout>
     <ImageView
         android:id="@+id/imageView_back"
         android:layout_width="276px"
         android:layout_height="49px"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="@dimen/dimen_categories_padding_bottom"
+        android:layout_marginRight="@dimen/dimen_categories_padding_bottom"
         android:adjustViewBounds="true"
         android:scaleType="centerCrop"
-        android:src="@drawable/img_back"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="@dimen/dimen_categories_padding_bottom"/>
+        android:src="@drawable/img_back" />
 
 </RelativeLayout>
