folder names created

--- a/app/src/main/res/layout/activity_category_backs_and_backgrounds.xml
+++ b/app/src/main/res/layout/activity_category_backs_and_backgrounds.xml
@@ -20,6 +20,7 @@
             android:orientation="vertical">
 
             <ImageView
+                android:id="@+id/imageView_color_backs"
                 android:layout_width="@dimen/dimen_category_nature_items_width"
                 android:layout_height="@dimen/dimen_category_nature_items_height"
                 android:adjustViewBounds="true"
@@ -27,6 +28,7 @@
                 android:src="@drawable/img_color_backs" />
 
             <ImageView
+                android:id="@+id/imageView_flower_backs"
                 android:layout_width="@dimen/dimen_category_nature_items_width"
                 android:layout_height="@dimen/dimen_category_nature_items_height"
                 android:adjustViewBounds="true"
@@ -42,6 +44,7 @@
             android:orientation="vertical">
 
             <ImageView
+                android:id="@+id/imageView_3d_backs"
                 android:layout_width="@dimen/dimen_category_nature_items_width"
                 android:layout_height="@dimen/dimen_category_nature_items_height"
                 android:adjustViewBounds="true"
@@ -49,6 +52,7 @@
                 android:src="@drawable/img_3d_backs" />
 
             <ImageView
+                android:id="@+id/imageView_3d"
                 android:layout_width="@dimen/dimen_category_nature_items_width"
                 android:layout_height="@dimen/dimen_category_nature_items_height"
                 android:adjustViewBounds="true"
