--- a/app/src/main/res/layout/activity_category_city_and_classic.xml
+++ b/app/src/main/res/layout/activity_category_city_and_classic.xml
@@ -20,6 +20,7 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/imageView_business"
                 android:layout_width="@dimen/dimen_category_nature_items_width"
                 android:layout_height="@dimen/dimen_category_nature_items_height"
                 android:adjustViewBounds="true"
@@ -27,6 +28,7 @@
                 android:src="@drawable/img_business" />
 
             <ImageView
+                android:id="@+id/imageView_map"
                 android:layout_width="@dimen/dimen_category_nature_items_width"
                 android:layout_height="@dimen/dimen_category_nature_items_height"
                 android:adjustViewBounds="true"
@@ -34,6 +36,7 @@
                 android:src="@drawable/img_map" />
 
             <ImageView
+                android:id="@+id/imageView_city"
                 android:layout_width="@dimen/dimen_category_nature_items_width"
                 android:layout_height="@dimen/dimen_category_nature_items_height"
                 android:adjustViewBounds="true"
@@ -49,6 +52,7 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/imageView_ceiling"
                 android:layout_width="@dimen/dimen_category_nature_items_width"
                 android:layout_height="@dimen/dimen_category_nature_items_height"
                 android:adjustViewBounds="true"
@@ -56,6 +60,7 @@
                 android:src="@drawable/img_ceiling_images" />
 
             <ImageView
+                android:id="@+id/imageView_traditional"
                 android:layout_width="@dimen/dimen_category_nature_items_width"
                 android:layout_height="@dimen/dimen_category_nature_items_height"
                 android:adjustViewBounds="true"
