--- a/app/src/main/res/layout/activity_category_face_and_sport.xml
+++ b/app/src/main/res/layout/activity_category_face_and_sport.xml
@@ -20,6 +20,7 @@
             android:orientation="vertical">
 
             <ImageView
+                android:id="@+id/imageView_woman"
                 android:layout_width="@dimen/dimen_category_nature_items_width"
                 android:layout_height="@dimen/dimen_category_nature_items_height"
                 android:adjustViewBounds="true"
@@ -27,6 +28,7 @@
                 android:src="@drawable/img_woman_photos" />
 
             <ImageView
+                android:id="@+id/imageView_romantic"
                 android:layout_width="@dimen/dimen_category_nature_items_width"
                 android:layout_height="@dimen/dimen_category_nature_items_height"
                 android:adjustViewBounds="true"
@@ -42,6 +44,7 @@
             android:orientation="vertical">
 
             <ImageView
+                android:id="@+id/imageView_eye_and_lip"
                 android:layout_width="@dimen/dimen_category_nature_items_width"
                 android:layout_height="@dimen/dimen_category_nature_items_height"
                 android:adjustViewBounds="true"
@@ -49,6 +52,7 @@
                 android:src="@drawable/img_eye_and_lip" />
 
             <ImageView
+                android:id="@+id/imageView_music"
                 android:layout_width="@dimen/dimen_category_nature_items_width"
                 android:layout_height="@dimen/dimen_category_nature_items_height"
                 android:adjustViewBounds="true"
@@ -64,6 +68,7 @@
             android:orientation="vertical">
 
             <ImageView
+                android:id="@+id/imageView_cinema_characters"
                 android:layout_width="@dimen/dimen_category_nature_items_width"
                 android:layout_height="@dimen/dimen_category_nature_items_height"
                 android:adjustViewBounds="true"
@@ -71,6 +76,7 @@
                 android:src="@drawable/img_cinema_characters" />
 
             <ImageView
+                android:id="@+id/imageView_fun"
                 android:layout_width="@dimen/dimen_category_nature_items_width"
                 android:layout_height="@dimen/dimen_category_nature_items_height"
                 android:adjustViewBounds="true"
