--- a/app/src/main/res/layout/activity_category_graphite_and_special_images.xml
+++ b/app/src/main/res/layout/activity_category_graphite_and_special_images.xml
@@ -20,6 +20,7 @@
             android:orientation="vertical">
 
             <ImageView
+                android:id="@+id/imageView_graphite"
                 android:layout_width="@dimen/dimen_category_nature_items_width"
                 android:layout_height="@dimen/dimen_category_nature_items_height"
                 android:adjustViewBounds="true"
@@ -27,6 +28,7 @@
                 android:src="@drawable/img_graphite" />
 
             <ImageView
+                android:id="@+id/imageView_lux"
                 android:layout_width="@dimen/dimen_category_nature_items_width"
                 android:layout_height="@dimen/dimen_category_nature_items_height"
                 android:adjustViewBounds="true"
@@ -42,6 +44,7 @@
             android:orientation="vertical">
 
             <ImageView
+                android:id="@+id/imageView_statue_and_wind"
                 android:layout_width="@dimen/dimen_category_nature_items_width"
                 android:layout_height="@dimen/dimen_category_nature_items_height"
                 android:adjustViewBounds="true"
@@ -49,6 +52,7 @@
                 android:src="@drawable/img_statue_and_wind" />
 
             <ImageView
+                android:id="@+id/imageView_music"
                 android:layout_width="@dimen/dimen_category_nature_items_width"
                 android:layout_height="@dimen/dimen_category_nature_items_height"
                 android:adjustViewBounds="true"
