--- a/app/src/main/res/layout/activity_category_nature.xml
+++ b/app/src/main/res/layout/activity_category_nature.xml
@@ -20,6 +20,7 @@
             android:orientation="vertical">
 
             <ImageView
+                android:id="@+id/imageView_winter"
                 android:layout_width="@dimen/dimen_category_nature_items_width"
                 android:layout_height="@dimen/dimen_category_nature_items_height"
                 android:adjustViewBounds="true"
@@ -27,6 +28,7 @@
                 android:src="@drawable/img_winter" />
 
             <ImageView
+                android:id="@+id/imageView_window_and_view"
                 android:layout_width="@dimen/dimen_category_nature_items_width"
                 android:layout_height="@dimen/dimen_category_nature_items_height"
                 android:adjustViewBounds="true"
@@ -42,6 +44,7 @@
             android:orientation="vertical">
 
             <ImageView
+                android:id="@+id/imageView_autumn"
                 android:layout_width="@dimen/dimen_category_nature_items_width"
                 android:layout_height="@dimen/dimen_category_nature_items_height"
                 android:adjustViewBounds="true"
@@ -49,6 +52,7 @@
                 android:src="@drawable/img_autumn" />
 
             <ImageView
+                android:id="@+id/imageView_rock_and_wall"
                 android:layout_width="@dimen/dimen_category_nature_items_width"
                 android:layout_height="@dimen/dimen_category_nature_items_height"
                 android:adjustViewBounds="true"
@@ -64,6 +68,7 @@
             android:orientation="vertical">
 
             <ImageView
+                android:id="@+id/imageView_summer"
                 android:layout_width="@dimen/dimen_category_nature_items_width"
                 android:layout_height="@dimen/dimen_category_nature_items_height"
                 android:adjustViewBounds="true"
@@ -71,6 +76,7 @@
                 android:src="@drawable/img_summer" />
 
             <ImageView
+                android:id="@+id/imageView_four_seasons"
                 android:layout_width="@dimen/dimen_category_nature_items_width"
                 android:layout_height="@dimen/dimen_category_nature_items_height"
                 android:adjustViewBounds="true"
@@ -86,6 +92,7 @@
             android:orientation="vertical">
 
             <ImageView
+                android:id="@+id/imageView_spring"
                 android:layout_width="@dimen/dimen_category_nature_items_width"
                 android:layout_height="@dimen/dimen_category_nature_items_height"
                 android:adjustViewBounds="true"
@@ -93,6 +100,7 @@
                 android:src="@drawable/img_spring" />
 
             <ImageView
+                android:id="@+id/imageView_sea_and_beach"
                 android:layout_width="@dimen/dimen_category_nature_items_width"
                 android:layout_height="@dimen/dimen_category_nature_items_height"
                 android:adjustViewBounds="true"
