--- a/app/src/main/res/layout/activity_login_old.xml
+++ b/app/src/main/res/layout/activity_login_old.xml
@@ -3,7 +3,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layoutDirection="rtl"
-    android:background="@drawable/img_background">
+    android:background="@color/color_all_background">
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/img_all_background"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"/>
     
     <LinearLayout
         android:orientation="vertical"
